<resources>
    <string name="app_name" translatable="false">Dyvide</string>
    <string name="google_maps_key" translatable="false">AIzaSyB6M4VO_cNryZSJWeZdiFCWiRlDmI38EiQ</string>

    <string-array name="fuel_types">
        <item>Diesel</item>
        <item>Gasoline</item>
        <item>Electric</item>
    </string-array>

    <string-array name="health_messages">
        <item>One text or call could wreck it all.</item>
        <item>Before setting off on a long car trip, be sure your vehicle is in prime condition</item>
        <item>Make sure everyone in the car buckles his or her seatbelt</item>
        <item>Pay close attention to and obey stop signs and traffic lights.</item>
        <item>Pull over and take breaks every couple of hours, even if you don’t feel sleepy.</item>
        <item>If you are driving a rental vehicle, familiarize yourself with the car and all of its equipment</item>
        <item>Never drink any alcohol before your trip. While you may not become intoxicated from one beer, you will become sleepy</item>
    </string-array>


    <string name="deleteConfirmation">Are you sure you want to delete this vehicle?</string>
    <string name="vehicleUpdated">Vehicle updated</string>
    <string name="notAvailable">Not available yet</string>
    <string name="restart_for_changes">The app will restart to apply changes.</string>
    <string name="language_dialog_title">Language</string>
    <string name="next">Next</string>
    <string name="toll_content">"If your trip includes tolls, they can be added to the cost. You can always change this setting however you like"</string>
    <string name="more_info">Discover more content within the app! Not only are there more functionalities available, but much more to come!</string>
    <string name="dyvide_info">Calculate the cost of a trip with your car and divide it with your friends easily. Setup your personal preferences and easily calculate your vehicle expenses.</string>
    <string name="welcome_info">With dyvide your car expenses will no longer be a headache! Follow these instructions to see how dyvide can help you do so. </string>
    <string name="support">"Welcome to Dyvide Support. We hope you are just here out of curiosity and not need. But if you do indeed need help, keep reading. "</string>
    <string name="supportMore">For any issues with the app please fill out the form with your issue. We hope we can resolve it as quick as possible so that it means no inconvenience to you</string>
    <string name="functionalities">If you don\'t have any issues you can still help anyway! If you have any ideas on how to improve the app, any kind: design-wise, funciontalities, whatever you might think might be useful for other users, is a valued contribution and we really appreciate it. You can make it through the contact form below. Don\'t forget though, we are always working on improving, some might already be on their way ;) </string>
    <string name="add_a_new_vehicle">Add a New Vehicle</string>
    <string name="choose_vehicle_type">Choose vehicle type:</string>
    <string name="consumption_every_100kmAdd">Consumption every 100km:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="vehicle_name">Vehicle Name:</string>
    <string name="consumption_every_100km">Consumption every 100km:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="vehicle_nameAdd">Vehicle Name:</string>
    <string name="auto_route">Auto Route</string>
    <string name="manual">Manual</string>
    <string name="support_menu">Support</string>
    <string name="select_vehicleType">Please select your vehicle type</string>
    <string name="addName_vehicle">Please add a name to your vehicle</string>
    <string name="addConsumption_vehicle">Please add consumption to your vehicle</string>
    <string name="select_fuelType">Please select a fuel type</string>
    <string name="nameTooLong">Vehicle name is too long!</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="setupVehicle">Please setup a vehicle</string>
    <string name="diesel">Diesel</string>
    <string name="gasoline">Gasoline</string>
    <string name="electric">Electric</string>
    <string name="selected">selected!</string>
    <string name="selectedVehicle">Selected:</string>
    <string name="notWithoutInternet">Not available without internet!</string>
    <string name="totalCost">Total Cost</string>
    <string name="addPassengers">Please add number of passengers</string>
    <string name="addTotalKM">Please add total KM</string>
    <string name="nonValidKM">Non valid KM value</string>
    <string name="nonValidPassengers">Non valid passenger value</string>
    <string name="nonValidToll">Non valid toll value</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="setupOriginDestination">Please setup origin or destination first</string>
    <string name="totalDistance">Total distance</string>
    <string name="locationNotEnabled">Location not enabled.</string>
    <string name="noOrigin">No origin setup</string>
    <string name="noDestination">No destination setup</string>
    <string name="routeTooShort">Route has a total of 0km</string>
    <string name="waitingInfo">Waiting for route information</string>
    <string name="totalTripCost">Total trip cost</string>
    <string name="originEqualsDestin">Origin and destination cannot be the same</string>
    <string name="currentLocation">Current Location</string>
    <string name="loading">Loading</string>
    <string name="noRoute">No route for these coordinates.</string>
    <string name="totalTollCost">Total toll cost</string>
    <string name="routeHasTolls">This route has tolls</string>
    <string name="routeHasNOTolls">This route has no tolls</string>
    <string name="failure">App failure. Please restart the app</string>
    <string name="total_trip_cost_0_0">Total trip cost: 0.0 €</string>
    <string name="totalKMInit">Total KM: 0 km</string>
    <string name="include_tolls">Include tolls:</string>
    <string name="total_toll_cost_0_0">Total toll cost: 0.0€</string>
    <string name="choose_what_tolls_to_include_in_total">Choose what tolls to include in total</string>
    <string name="calculate">Calculate</string>
    <string name="please_use_euros_as_units">Please use euros as units</string>
    <string name="consumption">consumption</string>
    <string name="consumption_l_100km">consumption (l/100km)</string>
    <string name="warning">Warning!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="accept">accept</string>
    <string name="cancel_button">Cancel</string>
    <string name="total_0_00_x_pers">Total: 0.00€ x Pers</string>
    <string name="total_km">Total KM:</string>
    <string name="total_kmm">Total km</string>
    <string name="to_divide_between">To divide between:</string>
    <string name="total_passengers">Total passengers</string>
    <string name="tolls">Tolls:</string>
    <string name="toll_total">Toll Total:</string>
    <string name="total_toll_costs">Total toll costs</string>
    <string name="tolls_are_included">Tolls are included!</string>
    <string name="and_much_more">And much more...</string>
    <string name="finish">Finish</string>
    <string name="contact">CONTACT</string>
    <string name="faq">FAQ</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="catal">Catalan</string>
    <string name="loading3Punts">Loading...</string>
    <string name="add">Add</string>

</resources>
