<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    >


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#FAFAFA"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/autoRoute"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="18dp"
                android:text="@string/auto_route"/>
            <TextView
                android:id="@+id/manualRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="18dp"
                android:text="@string/manual"/>
            <TextView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="18dp"
                android:text="@string/support_menu"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FAFAFA"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_alignParentTop="true"
                />
            <View
                android:id="@+id/view_big_bar"
                android:layout_width="90dp"
                android:layout_height="4dp"
                android:background="#7ED31F"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_alignParentTop="true"
                />
        </RelativeLayout>

    </LinearLayout>


</FrameLayout>
